# searchai

./: .dockerignore  .drylintrc.json  .env.example  .gitignore  .hintrc  .htmlhintrc  .oxfmtrc.json  .oxlintrc.convex.json  .oxlintrc.json  .prettierignore  AGENT.md  AGENTS.md  CLEANUP_PLAN.md  CONTRIBUTING.md  DELETE_FLOW_ANALYSIS.md  DELETE_TEST_INSTRUCTIONS.md  Dockerfile  LICENSE.md  MESSAGE_ARCHITECTURE_FIX.md  README.md  RELIABILITY.md  apply-responsive.cjs  audit_progress.md  bug_fixes_aug_13_25.md  bug_fixes_claude_aug_13_25.md  bug_fixes_gemini_aug_13_25.md  bug_fixes_opencode_aug_13_25.md  chat_fix_race_conditions_aug_13_25.md  chat_interface_tasks_aug_12_25.md  chat_interface_tasks_aug_12_25_completed.md  components.json  db.sqlite3  delete-fix-comprehensive.md  eslint.config.mjs  implementation_plan.md  index.html  manage.py  missing_loading_state_and_duplicate_code_aug_15_25.md  oct-23-25-fix-search-context.md  opencode_working_doc.md  (+20 more)
.cursor/: environment.json
.cursor/rules/: chat.mdc  convex_rules.mdc  pagination.mdc  sdk-integration.mdc  testing.mdc  testing_ci.mdc  testing_e2e.mdc  testing_stack.mdc  testing_unit.mdc  type-safety-zod-validation.mdc
.github/workflows/: deploy.yml  playwright.yml  validate.yml
.husky/: pre-commit  pre-commit-checks.md  pre-push
__tests__/: playwright-integration.config.ts  setup.ts
__tests__/config/: browsers.ts
agent/: __init__.py  apps.py  celery_setup.py  chatbot_views.py  cli.py  cli_quiet.py  llm_clients.py  search_views.py  tasks.py  urls.py  views.py
agent/scraping/: views.py  (+2 more)
app/: __init__.py  apps.py  models.py  tests.py  urls.py  views.py
config/: drylintrc.json  oxfmtrc.json  oxlintrc.json  playwright-integration.config.ts  playwright.browsers.ts  playwright.config.ts  playwright.viewports.ts  prek.toml  sgconfig.yml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vitest.config.ts
convex/: ai.ts  chats.ts  crons.ts  email.ts  enhancements.ts  http.ts  messages.ts  messages_insert_document.ts  preferences.ts  rateLimits.ts  router.ts  schema.ts  search.ts  sitemap.ts  storage.ts  tsconfig.json  workflowEvents.ts  workflowTokens.ts  workflowTokensActions.ts
docs/: Auth-State-Text-Input-Fix-Summary.md  CHAT_TOOLBAR_REGRESSION_PREVENTION.md  ID_GENERATION_STRATEGY.md  PAGINATION_GUIDE.md  README.md  SEARCH_API_MOCKING.md  WebKit-Compatibility-Audit.md  WebKit-Text-Input-Stability-Audit.md  api.md  architecture.md  autofocus-implementation.md  configuration.md  development.md  iOS-Safari-Keyboard-Fix-Summary.md  iPad-Keyboard-Fix-Deep-Analysis.md  testing.md
project/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
public/: mockServiceWorker.js  robots.txt  site.webmanifest
scripts/: check-convex-imports.cjs  check-convex-types.mjs  check-env-usage.mjs  check-env-vars.js  check-loc.mjs  check-react-keys.js  convex-ts-plugin.js  install-playwright.mjs  lint-clean.js  lint-convex-types.mjs  patch-hooks-verbose.mjs  push.sh  run-tests-with-mocks.sh  server.mjs  test-harness.js  test-with-backend.mjs
src/: App.tsx  SignOutButton.tsx  index.css  main.tsx  tsconfig.json
tests/: MIGRATION_GUIDE.md  chat-links.spec.mjs  chat-links.test.ts  content-pipeline.test.ts  convex.search.spec.mjs  convex.search.test.ts  creator-detection.spec.mjs  creator-detection.test.ts  currentChat-derivation.spec.mjs  currentChat-derivation.test.ts  enhancements.spec.mjs  enhancements.test.ts  integration-title-auth.mjs  new-chat.spec.mjs  new-chat.test.ts  setup.ts  title-generation.spec.mjs  title-generation.test.ts  url-extraction.spec.mjs  url-extraction.test.ts  verify-title-generation.mjs  verify-title-generation.test.ts
(+539 files in other folders)
